--- a/package.json
+++ b/package.json
@@ -5,17 +5,26 @@
   "repository": "git@github.com:richzago97/redesocial.git",
   "author": "richzago <rich.czago@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.16.3",
-    "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "pg": "^8.10.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.15"
-  }
+   "scripts": {
+      "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "start": "ts-node src/index.ts"
+   },
+   "devDependencies": {
+      "@types/express": "^4.17.17",
+      "@types/node": "^16.11.10",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "4.5.2",
+      "ts-node": "10.7.0"
+   },
+   "dependencies": {
+      "cross-env": "^7.0.3",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "express-async-errors": "^3.1.1",
+      "mongodb": "^5.3.0",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.15"
+   }
 }
