--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^16.11.10",
     "ts-node": "10.7.0",
@@ -19,14 +21,17 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.3.15"
+    "typeorm": "0.3.15",
+    "zod": "^3.21.4"
   }
 }
